crates/taut-rpc-macros/tests/ui/validate-min-on-string-fail.stderr
error[E0277]: the trait bound `std::string::String: Copy` is not satisfied
 --> tests/ui/validate-min-on-string-fail.rs:3:12
  |
3 | struct X { #[taut(min = 3)] name: String }
  |            -^^^^^^^^^^^^^^^^^^^^
  |            |
  |            the trait `Copy` is not implemented for `std::string::String`
  |            required by a bound introduced by this call
  |
note: required by a bound in `taut_rpc::validate::check::min`
 --> $WORKSPACE/crates/taut-rpc/src/validate.rs
  |
  |     pub fn min<T>(path: &str, value: T, min: f64) -> Result<(), ValidationError>
  |            --- required by a bound in this function
  |     where
  |         T: Into<f64> + Copy,
  |                        ^^^^ required by this bound in `min`

error[E0277]: the trait bound `f64: From<std::string::String>` is not satisfied
 --> tests/ui/validate-min-on-string-fail.rs:3:12
  |
3 | struct X { #[taut(min = 3)] name: String }
  |            -^^^^^^^^^^^^^^^^^^^^
  |            |
  |            the trait `From<std::string::String>` is not implemented for `f64`
  |            required by a bound introduced by this call
  |
  = help: the following other types implement trait `From<T>`:
            `f64` implements `From<bool>`
            `f64` implements `From<f16>`
            `f64` implements `From<f32>`
            `f64` implements `From<i16>`
            `f64` implements `From<i32>`
            `f64` implements `From<i8>`
            `f64` implements `From<u16>`
            `f64` implements `From<u32>`
            `f64` implements `From<u8>`
  = note: required for `std::string::String` to implement `Into<f64>`
note: required by a bound in `taut_rpc::validate::check::min`
 --> $WORKSPACE/crates/taut-rpc/src/validate.rs
  |
  |     pub fn min<T>(path: &str, value: T, min: f64) -> Result<(), ValidationError>
  |            --- required by a bound in this function
  |     where
  |         T: Into<f64> + Copy,
  |            ^^^^^^^^^ required by this bound in `min`
