crates/taut-rpc-macros/tests/ui/validate-min-on-string-fail.rs
use taut_rpc::Validate;
#[derive(Validate)]
struct X { #[taut(min = 3)] name: String }
fn main() {}
